# Star-Magic

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ANALYSIS_COMPLETE_SUMMARY.md  BATCH_6_COMPLETE.md  BATCH_EXTRACTION_SUMMARY.md  BUILD_INSTRUCTIONS_PERMANENT.md  BUILD_STATUS.md  BUILD_SUCCESS_STATUS.json  CLAUDE_SETUP.md  CMAKE_BUILD_STATUS.md  CMAKE_RESTORE_POINT.txt  CMakeCache.txt  CMakeLists.txt  CMakeLists_31c4c13.txt  CMakeLists_RESTORE_20251114_211502.txt  CMakeLists_RESTORE_20251114_211502_UPDATED.txt  CMakeLists_backup_19nov2025_BEFORE_WOLFRAM.txt  CMakeLists_backup_20251113_002012.txt  CMakePresets.json  COANQI_QUICK_REF.md  COANQI_SUMMARY.md  COANQI_USER_GUIDE.md  CODE_OF_CONDUCT.md  COMMIT_PLAN.md  COMPLETE_PHYSICS_CLASS_INVENTORY.csv  COMPLETE_PHYSICS_INVENTORY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TEST_RESULTS.md  CONTRIBUTING.md  CONVERSATION_LOG.txt  CONVERSION_GUIDE.md  CPP_FILES_INSPECTION_REPORT.md  CTestTestfile.cmake  Camera.h  CelestialBody.h  CoAnQi_enhancements.cpp  DEDUPLICATION_SUMMARY.md  EXTRACTION_COMPLETE_REPORT.md  FINAL_INTEGRATION_REPORT.md  (+600 more)
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
Core/: FluidSolver.cpp  FluidSolver.hpp  PhysicsTerms.hpp  SystemCatalogue.cpp  SystemCatalogue.hpp  UQFFCore.hpp  UQFFModule4.cpp  UQFFModule4.hpp
Core/Modules/: ASASSN14liUQFFModule.cpp  Abell2256UQFFModule.cpp  AetherCouplingModule.cpp  AetherVacuumDensityModule.cpp  AndromedaUQFFModule.cpp  AstroSystemsUQFFModule.cpp  BackgroundAetherModule.cpp  BigBangGravityUQFFModule.cpp  BuoyancyCouplingModule.cpp  ButterflyNebulaUQFFModule.cpp  CentaurusAUQFFModule.cpp  CompressedResonanceUQFF24Module.cpp  CompressedResonanceUQFF34Module.cpp  CompressedResonanceUQFFModule.cpp  CorePenetrationModule.cpp  CrabNebulaUQFFModule.cpp  CrabResonanceUQFFModule.cpp  CrabUQFFModule.cpp  DPMModule.cpp  ESO137UQFFModule.cpp  ElGordoUQFFModule.cpp  FeedbackFactorModule.cpp  ForceModule.cpp  GalacticBlackHoleModule.cpp  GalacticDistanceModule.cpp  HeavisideFractionModule.cpp  HeliosphereThicknessModule.cpp  HydrogenAtomUQFFModule.cpp  HydrogenPToEResonanceUQFFModule.cpp  HydrogenResonanceUQFFModule.cpp  HydrogenResonanceUQFFModule_HEALED_20251115_0140.cpp  HydrogenUQFFModule.cpp  IC2163UQFFModule.cpp  InertiaCouplingModule.cpp  InertiaUQFFModule.cpp  InputModule.cpp  J1610UQFFModule.cpp  JupiterAuroraeUQFFModule.cpp  LENRCalibUQFFModule.cpp  LENRUQFFModule.cpp  (+85 more)
FULL_BACKUP_20251116_021903/: CMAKE_RESTORE_POINT.txt  MAIN_1_CoAnQi_restore_20251113_051422.cpp  THREADING_ENABLED.md  copilot_thread_capture_source.cpp  method_mapping.json  original_module_methods.json  package.json  restore_point_14nov2025_1226pm.cpp  restore_point_15nov2025_0155.cpp
RESTORE_POINT_16NOV2025_651AM/: CMakeLists_BACKUP.txt  RESTORE_POINT_MANIFEST.txt  RESTORE_POINT_MANIFEST_UPDATED.txt  TIMESTAMP_ANALYSIS_COMPLETE.md
RESTORE_POINT_20NOV2025_160720/: COMPLETE_REGISTRY_LIST.txt  REGISTRY_INFORMATION_COMPLETE.md  RESTORE_POINT_MANIFEST.txt
